fix: code smell and add log2